[gd_scene load_steps=2 format=3 uid="uid://cuc04tntwpqpc"]

[ext_resource type="Script" path="res://views/main_menu/main_menu_hud.gd" id="1_ltwvb"]

[node name="Main_Menu_HUD" type="CanvasLayer"]
script = ExtResource("1_ltwvb")

[node name="Start_Btn" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -25.0
offset_right = 75.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
text = "Start Game"

[node name="Quit_Btn" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = 107.0
offset_right = 75.0
offset_bottom = 157.0
grow_horizontal = 2
grow_vertical = 2
text = "Quit
"

[node name="Settings_Btn" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = 37.0
offset_right = 75.0
offset_bottom = 87.0
grow_horizontal = 2
grow_vertical = 2
text = "Settings"

[connection signal="pressed" from="Start_Btn" to="." method="_on_start_btn_pressed"]
[connection signal="pressed" from="Quit_Btn" to="." method="_on_quit_btn_pressed"]
[connection signal="pressed" from="Settings_Btn" to="." method="_on_settings_btn_pressed"]
